# hunterjobs-ats

./: .gitignore  CLAUDE.md  LICENSE  README.md  _start.bat  _start.sh  brain1.py  brain2.py  brain2_chat.py  config.json  conftest.py  dashboard.py  database.py  embeddings.py  keys_dummy.py  pyproject.toml  requirements.txt  run_brain1.py  run_brain2.py  runner_status.py
.github/workflows/: test.yml
core/: config.py  database.py  embeddings.py  runner_status.py  schemas.py
pipeline/: brain1.py  brain2.py  brain2_chat.py  process_control.py  run_brain1.py  run_brain2.py
pipeline/sources/: __init__.py  hn.py
scripts/: setup.py  wipe.py
tests/: test_core.py
ui/: db_queries.py  helpers.py  jobs.py  tabs.py  theme.py
